salesforce/force-app/main/default/objects/Blister_Detail__c/Blister_Detail__c.object-meta.xml
<CustomObject>
    <description>Blister pack packaging costs</description>
    <label>Blister Detail</label>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blister Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>