salesforce/force-app/main/default/objects/Blister_Detail__c/fields/Blister_Count_Amount__c.field-meta.xml
<CustomField>
    <fullName>Blister_Count_Amount__c</fullName><label>Blister Count Amount</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>