salesforce/force-app/main/default/objects/Blister_Detail__c/fields/Other_Cost__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost__c</fullName><label>Other Cost</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>