salesforce/force-app/main/default/objects/Blister_Detail__c/fields/Pack_Out__c.field-meta.xml
<CustomField>
    <fullName>Pack_Out__c</fullName><label>Pack Out</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>