salesforce/force-app/main/default/objects/Blister_Detail__c/fields/Research_Development_Bulk__c.field-meta.xml
<CustomField>
    <fullName>Research_Development_Bulk__c</fullName><label>R&D (Bulk)</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>