salesforce/force-app/main/default/objects/Blister_Detail__c/fields/Shipper_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Case_Count__c</fullName><label>Shipper Case Count</label><precision>10</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>