salesforce/force-app/main/default/objects/Blister_Detail__c/fields/Wafer_Seal__c.field-meta.xml
<CustomField>
    <fullName>Wafer_Seal__c</fullName><label>Wafer Seal</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>